<resources>
    <string name="app_name">Fresh Crops</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>
    <string name="notifications">Notifications</string>
    <string name="si_su">Please Sign in or sign up .</string>
    <string name="ok">Ok</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="forget_password_click_here">Forget password ? click here .</string>
    <string name="change_language_to_english">Change language to English.</string>
    <string name="change_language_to_arabic">Change language to Arabic.</string>
    <string name="open_sesame">Skip</string>
    <string name="add_delegate">Add delegate</string>
    <string name="field_req">Field required</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="signning_in">Signing In...</string>
    <string name="personal_information">Personal information</string>
    <string name="full_name">Full name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="upload_personal_photo">Upload personal photo</string>
    <string name="_500_500_pixel">500 * 500 pixel</string>
    <string name="identity_card">Identity card</string>
    <string name="information_and_privacy_in_safety">Information and privacy in safety</string>
    <string name="phone">Phone</string>
    <string name="vehicle_information">Vehicle information</string>
    <string name="driving_license">Driving license</string>
    <string name="the_license_must_be_valid">The license must be valid</string>
    <string name="vehicle_license">Vehicle license</string>
    <string name="vehicle_photo">Vehicle photo</string>
    <string name="front_photo">Front photo</string>
    <string name="back_photo">Back photo</string>
    <string name="the_license_must_be_valid2">The license must be valid</string>
    <string name="approve_terms_and_condition">Approve</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="pers_photo_req">Personal photo required</string>
    <string name="id_photo_req">Identity card photo required</string>
    <string name="license_photo_required">License photo required</string>
    <string name="driving_photo_req">Driving photo required</string>
    <string name="front_vehicle_photo">Front vehicle photo required</string>
    <string name="back_vehicle_photo">Back vehicle photo required</string>
    <string name="delg_su">Delegate Sign Up</string>
    <string name="perm_image_denied">Permission denied</string>
    <string name="accept">Accept</string>
    <string name="cnt_sign_up">You cannot sign up without accepting terms and conditions</string>
    <string name="recover_password">Recover password</string>
    <string name="email_address">Email address</string>
    <string name="we_will_send_you_a_link_to_on_the_email_recover_your_password">We will send you a new password on your phone number</string>
    <string name="inv_email">Invalid email</string>
    <string name="wait">Wait...</string>
    <string name="search">Search...</string>
    <string name="departments">Departments</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="my_order">My orders</string>
    <string name="me">Me</string>
    <string name="discounts">Discounts</string>
    <string name="review_purchases">Review purchases</string>
    <string name="delivery_and_address">Delivery and address</string>
    <string name="payment_and_confirmation">Payment and confirmation</string>
    <string name="sales_tax">Sales tax</string>
    <string name="products_cost">Products cost</string>
    <string name="total">Total</string>
    <string name="continuee">Continue</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="select_location_from_map">Select location from map</string>
    <string name="building_number_street_name">Building number,Street name</string>
    <string name="any_feedback_for_delegate">Any notes for delegate ?</string>
    <string name="feedback">Notes</string>
    <string name="delivery_time">Delivery time</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="discount_coupon">Discount Coupon</string>
    <string name="active">Active</string>
    <string name="payment">Payment</string>
    <string name="order_summary">Order summary</string>
    <string name="total2">Total</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="card_number">Card number</string>
    <string name="expiration">Expiration</string>
    <string name="password2">Password</string>
    <string name="confirm">Confirm</string>
    <string name="type_your_address">Type your address...</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="no_search_results">No search results</string>
    <string name="allow_dukkan_to_access_this_device_s_location">Allow Fresh Crops to access this device\'s location ?</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="gps_perm_denied">Access device\'s location permission denied</string>
    <string name="cnt_get_loc">Cannot get your location check internet connection</string>
    <string name="save_your_location">Save your location</string>
    <string name="supermarket">Supermarket</string>
    <string name="something">Something went haywire</string>
    <string name="undo">undo</string>
    <string name="There_are_no_departments_to_display">There are no departments to display</string>
    <string name="there_are_no_products_to_display">There are no products to display</string>
    <string name="discount">Discount</string>
    <string name="rsa">SR</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="similar_products">Similar products</string>
    <string name="ch_size">Choose Size</string>
    <string name="profile">Profile</string>
    <string name="my_notification">Notifications</string>
    <string name="empty_cart">Empty cart</string>
    <string name="wait_our_offers">Wait our offers</string>
    <string name="cur_order">Current orders</string>
    <string name="prv_order">Previous orders</string>
    <string name="password">Password</string>
    <string name="contact_us">Customer service</string>
    <string name="about_dukkan">About Fresh Crops</string>
    <string name="share">Share</string>
    <string name="change_language">Change language</string>
    <string name="lang">Language</string>
    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="update_phone">Update phone</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="succ">Success</string>
    <string name="failed">Failed try again later</string>
    <string name="recent_search">Recent search</string>
    <string name="search2">Search</string>
    <string name="no_products_searched_for_recently">No products searched for recently</string>
    <string name="no_ser_res">No search results</string>
    <string name="recently_visited">Recently visited</string>
    <string name="delivery_time2">Delivery time</string>
    <string name="choose_delivery_time">Choose delivery time :</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="save_delivery_time">Save delivery time</string>
    <string name="the_arrival_time_will_be_determined_when_the_delegate_accepts_your_order">The arrival time will be determined when the delegate accepts your order.</string>
    <string name="delv_cost">Delivery cost :</string>
    <string name="less_than_2_hour">Less than 2 hour</string>
    <string name="within_2_hour">Within 2 hour</string>
    <string name="delivered_order_to_your_current_location">Delivered order to your current address ?</string>
    <string name="sel_delv_loc">Select delivered address</string>
    <string name="sel_delv_time">Select delivery time</string>
    <string name="congratulation">Congratulation</string>
    <string name="you_have_received_a_discount_of">You have received a discount of</string>
    <string name="on_the_price_of_the_products">on the price of the products</string>
    <string name="get_it">Get it</string>
    <string name="coup_not_active">Coupon not active</string>
    <string name="coupon_value">Coupon value</string>
    <string name="your_order_successfully_confirmed_your_order_number_is">Your order successfully confirmed! your order number is</string>
    <string name="follow_order">Follow order</string>
    <string name="back2">Back</string>
    <string name="inc_phonr_password">Incorrect user phone or password</string>
    <string name="signingup">Signing Up ...</string>
    <string name="phone_number_exists">Phone number is exists</string>
    <string name="declined_orders">Declined orders</string>
    <string name="refused_orders">Refused orders</string>
    <string name="total3">Total</string>
    <string name="credit_limit">Credit limit</string>
    <string name="dukkan_receivables">FreshCrops receivables</string>
    <string name="my_receivable">My receivable</string>
    <string name="transformation">Transformation</string>
    <string name="phone_number_not_exists">Phone number not exists</string>
    <string name="sgin_out">Signing out...</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_sent_successfully">Order sent successfully</string>
    <string name="welcome_delegate_not">Welcome to Fresh Crops will check the registration data as a delegate and send you a notification when you agree to activate your account.</string>
    <string name="inc_img_path">incorrect image path</string>
    <string name="updating_phone">Updating phone number...</string>
    <string name="incorrect_old_password">incorrect old password</string>
    <string name="new_orders">New orders</string>
    <string name="order_number">Order number</string>
    <string name="order_status">Order status</string>
    <string name="details">Details</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="min">MIN</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">Hs</string>
    <string name="yesterday">yesterday</string>
    <string name="day">D</string>
    <string name="not_approved">Not approved</string>
    <string name="done2">Done</string>
    <string name="delegate_accept_order">Delegate accept order</string>
    <string name="collecting_order">Collecting order</string>
    <string name="order_collected">Order collected</string>
    <string name="delivering_order">Delivering order</string>
    <string name="no_orders_to_display">No orders to display</string>
    <string name="panda">Panda,Hyper panda</string>
    <string name="show_products">Show products</string>
    <string name="client_name">Client name</string>
    <string name="show_address_on_map">Show address on map</string>
    <string name="notes">Notes</string>
    <string name="accept_order">Accept order</string>
    <string name="request_again">Request again</string>
    <string name="order_cost">Order cost</string>
    <string name="use_coupon">Order cost by using coupon</string>
    <string name="use_points">Order cost by using points</string>
</resources>