<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/map_blue"
            android:padding="8dp"
            android:tint="@color/colorPrimary"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_gravity="center_vertical"
            android:text="@string/delivered_order_to_your_current_location"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/ok"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/cancel"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>