<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

        <ImageView
            android:id="@+id/image_cup"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cup"
            android:layout_marginTop="20dp"
            />
        <ImageView
            android:id="@+id/image_congratulation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/en_cong"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/gray_black"
            android:textSize="15sp"
            android:text="@string/on_the_price_of_the_products"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"

            />

        <Button
            android:id="@+id/btn_coupon"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_congratulation"
            android:textSize="20sp"
            android:text="@string/use_coupon"

            />
    <Button
        android:id="@+id/btn_point"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_congratulation"
        android:textSize="20sp"
        android:text="@string/use_points"

        />

    </LinearLayout>

