<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/update_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/current_password"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="5dp"

            >
            <EditText
                android:id="@+id/edt_current_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edt_signup_bg"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textColorHint="@color/gray3"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/new_password"
            android:layout_marginTop="5dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="5dp"

            >
            <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edt_signup_bg"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textColorHint="@color/gray3"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="1"

        >
        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:background="#00000000"
            android:text="@string/update"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:background="#00000000"
            android:text="@string/cancel"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>