<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:text="@string/order_cost"
            android:textStyle="bold"

            />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/sales_tax"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1.3"/>
            <TextView
                android:id="@+id/tv_tax"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="0%"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/products_cost"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1.3"/>
            <TextView
                android:id="@+id/tv_product_cost"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="0"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/delivery_cost"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1.3"/>
            <TextView
                android:id="@+id/tv_delivery_cost"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="0"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/total"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1.3"/>
            <TextView
                android:id="@+id/tv_total"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="0"
                />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/request_again"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:textColor="@color/gray3"
            android:textSize="15sp"
            android:text="@string/cancel"
            />
    </androidx.cardview.widget.CardView>
    </LinearLayout>

