<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/update_phone"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/phone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/ll_login_bg"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="+966"

                />
            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:hint="533332583"
                android:textColorHint="@color/gray_text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:inputType="phone"
                android:textColor="@color/black"
                android:singleLine="true"
                android:gravity="center_vertical"

                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="1"

        >
        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:background="#00000000"
            android:text="@string/update"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:background="#00000000"
            android:text="@string/cancel"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>